[package]
name = "cvport"
version = "0.1.0"
authors = ["Jonny <jonnym22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
geo = "0.13.0"
geo-types = "0.5.0"
log = "0.4"
rand = "0.7.3"
rand_distr = "0.2.2"

[dev-dependencies]
rand_pcg = "0.2.1"